# Robotics-Projects-ROS-2021-2022

./: README.md
instruction/: project2.txt
project1/project1/: CMakeLists.txt  package.xml
project1/project1/cfg/: dynamic_rec.cfg
project1/project1/launch/: project1.launch
project1/project1/src/: fw_omnidirectional_robot_odometry.cpp
project1/project1_calibration/: CMakeLists.txt  package.xml
project1/project1_calibration/launch/: project1_calibration.launch
project1/project1_calibration/src/: calibration.cpp
project2/project2/: CMakeLists.txt  package.xml
project2/project2/launch/: amcl.launch  amcl.launch.xml  gmapping.launch  gmapping.launch.xml  scan_merger.launch
project2/project2/maps/: map.pgm
project2/project2/rviz/: amcl_config.rviz  gmapping_config.rviz
project2/project2/src/: odom_tf.cpp
